--- a/templates/productos/catalogo.html
+++ b/templates/productos/catalogo.html
@@ -17,7 +17,7 @@
       </a>
     {% endif %}
     <button id="cart-icon" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#cart-modal">
-      <i class="bi bi-cart"></i> Carrito (<span id="cart-count">0</span>)
+      <i class="bi bi-cart"></i> Carrito (<span id="cart-count-catalogo">0</span>)
     </button>
   </div>
 </div>
@@ -54,9 +54,9 @@
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="card h-100 product-card">
           {% if p.imagen %}
-            <img src="{{ p.imagen.url }}" class="card-img-top" style="object-fit:cover; height:180px" alt="{{ p.nombre }}">
+            <img src="{{ p.imagen.url }}" class="card-img-top" style="object-fit: cover; object-position: center; width: 100%; height: 200px; display: block;" alt="{{ p.nombre }}">
           {% else %}
-            <div class="bg-light d-flex align-items-center justify-content-center" style="height:180px">Sin imagen</div>
+            <div class="bg-light d-flex align-items-center justify-content-center" style="height:200px">Sin imagen</div>
           {% endif %}
           <div class="card-body">
             <h5 class="card-title mb-1">{{ p.nombre }}</h5>
