--- a/core/templates/core/inicio.html
+++ b/core/templates/core/inicio.html
@@ -32,11 +32,11 @@
     <!-- Carrusel de imágenes -->
     <div class="col-lg-6">
       <div id="hero-carousel" class="position-relative rounded-4 overflow-hidden shadow">
-        <img src="{% static 'img/imagen1.jpg' %}" class="w-100 hero-img active" alt="Mascota feliz">
-        <img src="{% static 'img/imagen2.jpg' %}" class="w-100 hero-img" alt="Comida para mascotas">
-        <img src="{% static 'img/imagen3.jpg' %}" class="w-100 hero-img" alt="Juguetes para perros">
-        <img src="{% static 'img/imagen4.jpg' %}" class="w-100 hero-img" alt="Juguetes para perros">
-        <img src="{% static 'img/imagen6.jpg' %}" class="w-100 hero-img" alt="Juguetes para perros">
+        <img src="{% static 'img/imagen1.jpg' %}" class="hero-img active" alt="Mascota feliz">
+        <img src="{% static 'img/imagen2.jpg' %}" class="hero-img" alt="Comida para mascotas">
+        <img src="{% static 'img/imagen3.jpg' %}" class="hero-img" alt="Juguetes para perros">
+        <img src="{% static 'img/imagen4.jpg' %}" class="hero-img" alt="Juguetes para perros">
+        <img src="{% static 'img/imagen6.jpg' %}" class="hero-img" alt="Juguetes para perros">
       </div>
     </div>
   </div>
@@ -252,13 +252,21 @@
   /* === Carrusel === */
   #hero-carousel {
     position: relative;
-    height: 400px;
+    width: 100%;
+    height: 450px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-position: center;
   }
 
   .hero-img {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     object-fit: cover;
